Fixed overflow bug using git bisect function
There used to be an awkward gap on the right side of the screen outside
of the scroll area which is now fixed

--- a/style.css
+++ b/style.css
@@ -8,10 +8,6 @@ Green  #bcde15
 
 */
 
-html {
-    overflow-x: hidden;
-}
-
 body {
     padding: 0;
 }
